<resources>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="personalization">Personalization</string>
    <string name="account">Account</string>
    <string name="services">Services</string>
    <string name="call_history">Call history</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="post_personalization">Post Personalization</string>
    <string name="account_safety">Account Safety</string>
    <string name="chat_appearance">Chat Appearance</string>
    <string name="notifications">Notifications</string>
    <string name="privacy">Privacy</string>
    <string name="data_storage"><![CDATA[Data & Storage]]></string>
    <string name="help">Help</string>
    <string name="about">About</string>
    <string name="recent_calls">Recent Calls</string>
    <string name="post">Post</string>
    <string name="story">Story</string>
    <string name="logout">Logout</string>
    <string name="message_upload_success">Uploading Success</string>
    <string name="file_upload_successful">Post has been uploaded successfully</string>
    <string name="uploading">Uploading</string>
    <string name="in_progress">in progress</string>
    <string name="noti_channel_default">Default Channel</string>
    <string name="app_name">NewApp</string>
    <string name="title_proceed_with_your">Proceed with your</string>
    <string name="login">Login</string>
    <string name="enter_your_username_or_phone_number">Enter your username or phone number</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="no_internet">Please connect to internet</string>
    <string name="enter_email_address">Enter email address</string>
    <string name="enter_mobile_number">Enter mobile number</string>
    <string name="enter_valid_address">Enter valid email address</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_confirm_password">Enter Confirm Password</string>
    <string name="password_and_confirm_password_not_match">Password and confirm password doesn\'t matched</string>
    <string name="enter_pass_validate">Enter Password with minimum 6 characters</string>
    <string name="enter_firstname_validate">Enter first name with minimum 3 characters</string>
    <string name="title_enter_your_password">Enter Your Password</string>
    <string name="title_reset_your_password">Reset Your Password</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="next">Next</string>
    <string name="enter_first">Enter first name</string>
    <string name="enter_last">Enter last name</string>
    <string name="resend_code">
        <u>Resend Code</u>
    </string>
    <string name="register">New User ? <u>Register now</u></string>
    <string name="tap_below_to_get_started">Tap below to get started!</string>
    <string name="how_the_public_media">HOW - The Public Media</string>
    <string name="safety_secrecy_simplicity">Safety.Secrecy.Simplicity.</string>
    <string name="powered_by">Powered by</string>
    <string name="adbiz_directory">ADBIZ DIRECTORY</string>
    <string name="hello">Hello!</string>
    <string name="please_enter_your_basic_details">Please enter your basic details.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="back">Back</string>
    <string name="create_your_nickname">Create Your Username</string>
    <string name="choose_a_default_name_or_use_your_creativity">Choose a default name or use your creativity!</string>
    <string name="done">Done</string>
    <string name="change_username"><u>Change Username</u></string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="profile_views">Profile Views</string>
    <string name="visibility">Visibility</string>
    <string name="show_me_nearby">Show me Nearby</string>
    <string name="performance_rewards">Performance rewards</string>
    <string name="my_post">My posts</string>
    <string name="tagged_posts">Tagged Posts</string>
    <string name="saved_posts">Saved Posts</string>
    <string name="groups">Groups</string>
    <string name="pages">Pages</string>
    <string name="friends">Friends</string>
    <string name="message">Message</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email</string>
    <string name="send_code">Send Code</string>
    <string name="verification_code">Verification code</string>
    <string name="reset_password">Reset password</string>
    <string name="set_a_password">Set a password</string>
    <string name="submit">Submit</string>
    <string name="password_and_confirm_password_must_be_same">Password and confirm password must be same.</string>
    <string name="text_count_down_timer">%02d:%02d</string>
    <string name="text_count_down_reset">00:00</string>
    <string name="ellipsis">&#8230;</string>
    <string name="video">Video</string>
    <string name="audio">Audio</string>
    <string name="mute">Mute</string>
    <string name="unmute">Unmute</string>
    <string name="search">Search</string>
    <string name="contact_detail">Contact Detail</string>
    <string name="chat_search">Chat Search</string>
    <string name="custom_notification">Custom Notification</string>
    <string name="photo_video_link_docs">Photo,Video,Link,Docs</string>
    <string name="star_message">Star Message</string>
    <string name="groups_in_common">Groups in common</string>
    <string name="pages_in_common">Pages in common</string>
    <string name="friends_in_common">Friends in common</string>
    <string name="block">Block</string>
    <string name="unblock">Unblock</string>
    <string name="report">Report</string>
    <string name="my_friends">My Friends</string>
    <string name="my_followers">My Followers</string>
    <string name="my_followings">My Followings</string>
    <string name="change_email">Change Email</string>
    <string name="change_mobile">Change Mobile</string>
    <string name="verify">Verify</string>
    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="term_condition">By Signing up,you\'re agree to our Terms of Use and Privacy Policy.</string>
    <string name="termmessage">Please agree to our terms and conditions or privacy policy</string>
    <string name="unfollow_confirm_msg">Do you want to Unfollow this user?</string>
    <string name="edit_my_profile">Edit my profile</string>
    <string name="delete_replay">Do you want to delete this reply ?</string>
    <string name="delete_comment">Do you want to delete this comment ?</string>
    <string name="secret_chat">Secret Chat</string>
    <string name="followed_page">Followed Page</string>
    <string name="my_pages">My Pages</string>
    <string name="chats">Chats</string>
    <string name="hook">Hook</string>
    <string name="clear">Clear</string>
    <string name="archive">Archive</string>
    <string name="unarchive">Unarchive</string>
    <string name="all_of_your_chat_are_archived">All of your chat are archived.</string>
    <string name="icon_to_start_new_chat">icon to start new chat.</string>
    <string name="tap_the">Tap the</string>
    <string name="broadcast_lists">Broadcast Lists</string>
    <string name="archive_chat">Archive Chat</string>
    <string name="unhook">Unhook</string>
    <string name="copylink">Copy Link</string>
    <string name="turnonpost">Turn on Post Notification</string>
    <string name="welcome_to_how_no_post_yet">Welcome to HOW.\n You haven\'t seen any post Yet.</string>
    <string name="get_al_post">20</string>
    <string name="get_comments">10</string>
    <string name="delete">Delete</string>
    <string name="reply">Reply</string>
    <string name="enter_your_comment">Enter Your Comment</string>
    <string name="send">Send</string>
    <string name="cancel">Cancel</string>
    <string name="you">You</string>
    <string name="edit">Edit</string>
    <string name="username">Username</string>
    <string name="archive_count">archive (%d)</string>
    <string name="title_archived_list">Archived List</string>
    <string name="notification_tune">Notification Tune</string>
    <string name="vibration">Vibration</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="birthdate">Birth Date</string>
    <string name="security">Security</string>
    <string name="delete_account">Delete Account</string>
    <string name="block_confirm_msg">Do you want to block this user?</string>
    <string name="unblock_confirm_msg">Do you want to unblock this user?</string>
    <string name="conform_report">Do you want to report this user?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="email_id">Email ID</string>
    <string name="enter_new_password">Enter new password</string>
    <string name="please_enter_minimum_password">Enter minimum 6 characters password.</string>
    <string name="error_msg_cannot_select_more_media_items">You cannot select more than 30 media items</string>
    <string name="error_msg_cannot_select_more_images">You cannot select more than 30 images</string>
    <string name="error_msg_cannot_select_more_image_and_videos"><![CDATA[You cannot select more than 5 video\n & \nmore than 15 images]]></string>
    <string name="error_msg_cannot_select_more_videos">You cannot select more than 5 videos</string>
    <string name="error_upload_failed">Uploading failed</string>
    <string name="message_upload_failed">File is not uploaded. Please TRY AGAIN</string>
    <string-array name="fontArrayThoughts">
        <item>boglebold.otf</item>
        <item>bogleregular.otf</item>
        <item>boglebold.otf</item>
        <item>bogleregular.otf</item>
    </string-array>
    <string name="label_brush">Brush</string>
    <string name="label_emoji">Emoji</string>
    <string name="label_sticker">Sticker</string>
    <string name="label_eraser">Eraser</string>
    <string name="label_eraser_mode">Eraser Mode</string>
    <string name="label_text">Text</string>
    <string name="label_filter">Filter</string>
    <string name="label_adjust">Adjust</string>
    <string name="msg_save_image">Are you want to exit without saving image ?</string>
    <string name="app_intent_name">PhotoEditor</string>
    <string name="msg_save_image_to_share">Please save image to share</string>
    <string name="msg_share_image">Share Image</string>
    <string name="popular_pages_limit">20</string>
    <string name="enter_text">Enter Text</string>
    <string name="exit_without_save">The edited image is not saved. Do you want to exit?</string>
    <string name="enter_reason">Enter reason</string>
    <string name="change_password">Change Password</string>
    <string name="annivarsary_date">Annivarsary Date</string>
    <string name="save">Save</string>
    <string name="change_email_id">Change Email ID</string>
    <string name="confirm">Confirm</string>
    <string name="old_password">Old Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_delete_msg">Do you wan\'t to delete this account?</string>
    <string name="group_search">Group Search</string>
    <string name="add_members">Add members</string>
    <string name="exit_group">Exit Group</string>
    <string name="report_group">Report Group</string>
    <string name="delete_group">Delete Group</string>
    <string name="group_setting">Group Setting</string>
    <string name="captain">CAPTAIN</string>
    <string name="confirm_exit_grp_msg">Do you wan\'t to exit this group?</string>
    <string name="confirm_delete_grp_msg">Do you wan\'t to delete this group?</string>
</resources>