<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/btn_rect_rounded_bg"
        android:backgroundTint="@color/white"
        android:layout_margin="@dimen/_5sdp"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/conform_report"
            style="@style/styleTextViewSmall"
            android:padding="@dimen/_10sdp"
            android:gravity="center"/>

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_reason"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:padding="@dimen/_5sdp"
            android:background="@null"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_5sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/yes"
                android:padding="@dimen/_5sdp"
                android:gravity="center"
                android:textColor="@color/green"/>

            <View
                android:layout_width="0.3dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/no"
                android:padding="@dimen/_5sdp"
                android:gravity="center"
                android:textColor="@color/red"/>
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>