<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="@dimen/_15sdp"
        tools:context=".ui.activities.ResetPasswordActivity">

        <include
            android:id="@+id/layout_back"
            layout="@layout/layout_back_btn" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/styleTextViewActionbar"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:textSize="@dimen/_18ssp"
                    android:text="@string/title_reset_your_password" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/styleTextViewNormal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:textSize="@dimen/_14ssp"
                    android:text="@string/enter_password" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_45sdp"
                    android:theme="@style/EditTextThemeOverlay"
                    app:passwordToggleDrawable="@drawable/selector_show_hide_password"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/password"
                        android:imeOptions="actionNext"
                        android:inputType="textPassword"
                        android:textSize="@dimen/_12ssp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/input_layout_confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_5sdp"
                    android:theme="@style/EditTextThemeOverlay"
                    app:passwordToggleDrawable="@drawable/selector_show_hide_password"
                    app:passwordToggleEnabled="true"
                    app:passwordToggleTint="@color/black">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edt_confirm_password"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="@string/confirm_password"
                        android:imeOptions="actionDone"
                        android:inputType="textPassword"
                        android:textSize="@dimen/_12ssp" />

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_submit"
                    style="@style/styleCommonButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_80sdp"
                    android:onClick="onClick"
                    android:text="@string/submit" />
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </LinearLayout>
</layout>