<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:focusable="false"
        android:focusableInTouchMode="true"
        android:orientation="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".ui.fragments.chat.ChatsFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:paddingBottom="@dimen/_15sdp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txt_title"
                style="@style/styleTextViewLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/chats"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/ll_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:background="@drawable/rect_rounded_search_bg"
                android:orientation="horizontal">

                <androidx.appcompat.widget.SearchView
                    android:id="@+id/search_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:theme="@style/styleImageGrayTint"
                    app:searchIcon="@drawable/ic_search" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/color_overlay"
            android:elevation="@dimen/_1sdp" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_chats"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/_60sdp"
            tools:itemCount="10"
            tools:listitem="@layout/item_chat" />


        <LinearLayout
            android:id="@+id/ll_empty_chat"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="@dimen/_80sdp"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/styleTextViewNormalBold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:text="@string/all_of_your_chat_are_archived"
                android:textSize="@dimen/_12ssp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/styleTextViewNormalBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/tap_the"
                    android:textSize="@dimen/_12ssp" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/_2sdp"
                    android:paddingEnd="@dimen/_2sdp"
                    app:srcCompat="@drawable/ic_feather"
                    app:tint="@color/theme_color" />

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/styleTextViewNormalBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/icon_to_start_new_chat"
                    android:textSize="@dimen/_12ssp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_30sdp"
                android:gravity="start"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_archive_chat"
                    style="@style/styleTextViewNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_archive1"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableTint="@color/theme_color"
                    android:gravity="start"
                    android:text="@string/archive_chat"
                    android:textColor="@color/theme_color" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txt_broadcast_list"
                    style="@style/styleTextViewNormal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:drawableStart="@drawable/ic_broadcast"
                    android:drawablePadding="@dimen/_10sdp"
                    android:drawableTint="@color/theme_color"
                    android:gravity="start"
                    android:text="@string/broadcast_lists"
                    android:textColor="@color/theme_color" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</layout>